# vanillars-server

./: Cargo.toml  README.md
src/: main.rs
src/database/: connection_to_mongo.rs  mod.rs
src/models/: request.rs
src/parses/: mod.rs  parse_header.rs  parse_request.rs  parse_request_line.rs
src/requests/: handle_request.rs  mod.rs
src/requests/methods/: create_cat.rs  delete_cat.rs  get_cat.rs  get_cats.rs  mod.rs  update_cat.rs
src/responses/: generate_responses.rs  mod.rs  status_message.rs
