[package]
name = "vanillars-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.5.0", default-features = false, features = [
    "tokio-sync",
] }
